# cosmwasm-lifecycle

./: .gitignore  README.md  go.mod  go.sum  readme.md
app/: app.go  encoding.go  simulation_test.go
cmd/cosmwasm-lifecycled/: main.go
cmd/cosmwasm-lifecycled/cmd/: config.go  root.go
cmd/lifecycle-hooksd/: main.go
cmd/lifecycle-hooksd/cmd/: config.go  root.go
docs/static/: openapi.yml
proto/cosmwasmlifecycle/: contract.proto  events.proto  execution_type.proto  genesis.proto  params.proto  query.proto  tx.proto
proto/cosmwasmlifecycle/cosmwasmlifecycle/: genesis.proto  params.proto  query.proto  tx.proto
proto/emidev98/cosmwasmlifecycle/: contract.proto  events.proto  execution_type.proto  genesis.proto  params.proto  query.proto  tx.proto
proto/emidev98/lifecycle_hooks/: contract.proto  events.proto  execution_type.proto  genesis.proto  params.proto  query.proto  tx.proto
testutil/keeper/: cosmwasmlifecycle.go
testutil/network/: network.go
workspace/: Cargo.toml
workspace/artifacts/: checksums.txt  checksums_intermediate.txt  error.wasm  success.wasm
workspace/contracts/error/: Cargo.toml
workspace/contracts/success/: Cargo.toml
workspace/contracts/success/src/: lib.rs
x/cosmwasmlifecycle/: genesis.go  genesis_test.go  module.go  module_simulation.go
x/cosmwasmlifecycle/keeper/: contract.go  events.go  genesis.go  keeper.go  msg_server.go  msg_server_test.go  params.go  params_test.go  query.go  query_params.go  query_params_test.go
x/cosmwasmlifecycle/types/: contract.go  contract.pb.go  errors.go  events.pb.go  execution_type.pb.go  expected_keepers.go  (+8 more)
x/lifecycle-hooks/: module.go  module_simulation.go
(+33 files in other folders)
